# AED2324_PRJ1_G109

./: .gitignore  CMakeLists.txt  Implementations.txt  dconfig  main.cpp
CSV/: classes_per_uc.csv
Changes/: changes.txt
DataModel/: Aula.cpp  Aula.h  Class.cpp  Class.h  ClassDateDuration.cpp  ClassDateDuration.h  CourseUnit.cpp  CourseUnit.h  Estudante.cpp  Estudante.h  Schedule.cpp  Schedule.h  Slot.cpp  Slot.h  Student.cpp  Student.h  TurmaUC.cpp  TurmaUC.h  UC.cpp  UC.h
FilesRepository/: Manager.cpp  Manager.h  Menu.cpp  Menu.h  Pedido.cpp  Pedido.h  test.cpp
html/: Aula_8cpp_source.html  Aula_8h_source.html  Estudante_8cpp_source.html  Estudante_8h_source.html  Manager_8cpp_source.html  Manager_8h_source.html  Menu_8cpp_source.html  Menu_8h_source.html  Pedido_8cpp_source.html  Pedido_8h_source.html  UC_8cpp_source.html  UC_8h_source.html  annotated.html  classAula-members.html  classAula.html  classEstudante-members.html  classEstudante.html  classManager-members.html  classManager.html  classMenu-members.html  classMenu.html  classPedido-members.html  classPedido.html  classUC-members.html  classUC.html  classes.html  dir_10b76d97540b8af47998b56970ce11d9.html  dir_2122ca185a9768c52edcf8beda834573.html  dynsections.js  files.html  functions.html  functions_func.html  index.html  main_8cpp_source.html  menudata.js  structCompareByFirst-members.html  structCompareByFirst.html  structCompareByName-members.html  structCompareByName.html  structCompareByNumber-members.html  (+5 more)
latex/: Aula_8cpp_source.tex  Aula_8h_source.tex  Estudante_8cpp_source.tex  annotated.tex  (+23 more)
(+27 files in other folders)
